<resources>
    <string name="app_name">Traviary</string>
    <string name="app_name_lowercase">traviary</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Traviary</string>
    <string name="home_title">Home</string>
    <string name="usa_title">United States</string>
    <string name="world_title">World</string>
    <string name="challenges_title">Challenges</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_google">"Sign In With Google"</string>
    <string name="title_activity_maps">Map</string>



    <!-- Challenges -->
    <!-- Challenges --><!-- Challenges -->
    <!-- Challenges --><!-- Challenges --><!-- Challenges -->
    <!-- Challenges --><!-- Challenges --><!-- Challenges --><!-- Challenges -->
    <!-- Challenges --><!-- Challenges --><!-- Challenges --><!-- Challenges --><!-- Challenges -->

    <string-array name="challenge_strings">

        <item>Pablo Escobar</item>
        <!-- Go to Colombia -->
        <item>Lewis and Clark</item>
        <!-- Go to all 50 states -->
        <item>The Interview</item>
        <!-- North Korea -->
        <item>Lord of the Rings</item>
        <!-- New Zealand -->
        <item>League of Legends / K-Pop</item>
        <!-- South Korea -->
        <item>Hello World!</item>
        <!-- Be logged in to your first location! -->
        <item>Conor McGregor</item>
        <!-- Ireland -->
        <item>Deep in the Heart of ...</item>
        <item>Daisy Dukes, Bikinis on Top</item>
        <item>Going Down Under</item>
        <!-- -->
        <item>Concrete Jungle</item>
        <!-- Efe likes Japan -->
        <item>Konnichiwa</item>
        <!-- France -->
        <item>Eiffel Tower</item>
        <!-- China -->
        <item>The Great Wall</item>
        <!-- self-explanatory -->
        <item>Mother Russia</item>

    </string-array>

    <string-array name="challenge_detail_strings">
        <item>Log In Colombia</item>
        <item>Go to all 50 states in the US</item>
        <item>Secret</item>
        <item>Log In New Zealand</item>
        <item>Log In South Korea</item>
        <item>Log into your first location</item>
        <item>Log In Ireland</item>
        <item>Log In Texas</item>
        <item>Log In California</item>
        <item>Log In Australia</item>
        <item>Log In New York</item>
        <item>Log In Japan</item>
        <item>Log In France</item>
        <item>Log In China</item>
        <item>Log In Russia</item>
    </string-array>
    
    <integer-array name="challenge_worth">
        <item>2000</item>
        <item>25000</item>
        <item>100000</item>
        <item>2000</item>
        <item>2000</item>
        <item>1500</item>
        <item>2000</item>
        <item>200</item>
        <item>200</item>
        <item>2000</item>
        <item>200</item>
        <item>2000</item>
        <item>2000</item>
        <item>2000</item>
        <item>2000</item>

    </integer-array>

    <string-array name="image_ids">
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
        <item>@drawable/_nigeria</item>
    </string-array>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>


</resources>